:iphone: Fix card heights on mobile and desktop

--- a/ui/src/app/pages/welcome/clock-card/clock-card.scss
+++ b/ui/src/app/pages/welcome/clock-card/clock-card.scss
@@ -1,6 +1,7 @@
 nz-card {
   height          : 100%;
   background-color: #A7F3D0;
+  flex-grow: 1;
 
   display        : flex;
   align-items    : center;
