--- a/ui/src/app/pages/welcome/door-card/door-card.scss
+++ b/ui/src/app/pages/welcome/door-card/door-card.scss
@@ -1,5 +1,6 @@
 nz-card {
   height: 100%;
+  flex-grow: 1;
   border-top: 3px solid #93C5FD;
 }
 
