--- a/ui/src/app/pages/welcome/emergency-card/emergency-card.scss
+++ b/ui/src/app/pages/welcome/emergency-card/emergency-card.scss
@@ -7,6 +7,7 @@
 
 nz-card {
   height    : 100%;
+  flex-grow: 1;
   border-top: 3px solid #93C5FD;
   position  : relative;
 
