--- a/ui/src/app/pages/welcome/roster-card/roster-card.scss
+++ b/ui/src/app/pages/welcome/roster-card/roster-card.scss
@@ -3,6 +3,7 @@
 
 nz-card {
   height: 100%;
+  flex-grow: 1;
   border-top: 3px solid #93C5FD;
 }
 
